fixed spacing and tab selection

--- a/CSS/Navbar.css
+++ b/CSS/Navbar.css
@@ -249,8 +249,8 @@ nav>#large>.tab-bar>.tab-item {
     padding: 8px 16px;
 }
 
-nav>#large>.tab-bar>.tab-item:first-child {
-    margin-top: 56px;
+nav>#large>.tab-bar>.tab-item:nth-child(2) {
+    padding-top: 56px;
 }
 
 nav>#large>.tab-bar>.tab-item#selected {
